ntfy/values/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          command: ["ntfy", "serve"]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy-cache-pvc
