ntfy/values/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
